# HuffmanEncoding

./: CMakeLists.txt  example.txt.huf  hashmap.cpp  mymap.h  secretmessage.txt.huf.txt  tests.cpp  tests.h  util.h
